test_files/netlist_format/valid/valid_04.net
B1 out 0 V=V(in)
+ + 1
V1 in 0 5
R1 in out 1k
.tran 1m
.backanno
.end
