test_files/netlist_format/invalid/invalid_09_line_2.net
V1 N001 0 5
Q1 N1 N2 0
.tran 1m
.backanno
.end
